Update memories section heading and paragraph text

--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
       </section>
 
       <section id="memories" class="card hidden" aria-hidden="true">
-        <h2>Nuestros momentos favoritos ✨</h2>
+        <h2>Gracias por tan lindos momentos preciosa ✨</h2>
         <p>
-          Gracias por decir que sí. Aquí guardé algunos recuerdos especiales
+         Ahora que dijiste que si muajajaja... mostrare mi verdadera
+          personalidad. Aquí guardé algunos recuerdos especiales
           nuestros.
         </p>
 
